# Bloniasz_Stephen_Estimation

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
Data/InputData/InputDataFiles/: Condition.mat
Output/Results/FinalFigures/Paper_markups/Figure_2/: Figure_2_config.json
Scripts/AnalysisScripts/: 00_qc_figure4_outlier_inspector.py  01_paper_figure_1_overview_grid.py  02_paper_figure_2_gamma_height_estimator.py  03_paper_figure_3_known_ground_truth_decomposition_cvll.py  03_supp_figure_3_cvll_lineplot.py  04_paper_figure_empirical_ecog_state_decomposition.py  05_paper_figure_empirical_matched_simulation.py  06_supp_figure_height_grid_benchmark.py  07_supp_figure_whole_session_slope_trajectory.py  08_supp_figure_empirical_cvll_2_vs_3_rhythms.py  figure_1_final.py  replot_figure7_height_grid_compact_v2.py  requirements_freeze.txt
Scripts/AnalysisScripts/SL_specdecomp/: .gitignore  README.rst  environment.yml  setup.py
Scripts/AnalysisScripts/SL_specdecomp/SL_specdecomp/: __init__.py  api.py  plotting.py  predictors.py  pymc_models.py  types.py  version.py
